crates/dsrs-macros/tests/ui/signature_serde_json_value.stderr
error: serde_json::Value is not supported in Signature fields; hint: use a concrete typed value
 --> tests/ui/signature_serde_json_value.rs:6:14
  |
6 |     payload: serde_json::Value,
  |              ^^^^^^^^^^^^^^^^^
