crates/dsrs-macros/tests/ui/signature_serde_json_value.rs
use dsrs_macros::Signature;

#[derive(Signature)]
struct SignatureSerdeJsonValue {
    #[input]
    payload: serde_json::Value,

    #[output]
    answer: String,
}

fn main() {}
